--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -20,7 +20,7 @@
 # ===================================================================
 
 # Use one of the supported image preview protocols
-set preview_images false
+set preview_images true
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
