Add i3lock binding

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -123,6 +123,8 @@ bindsym $mod+Shift+r reload
 bindsym $mod+Shift+q restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
+# lock session
+bindsym $mod+Ctrl+l exec "i3lock --color=112233"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
