--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -25,6 +25,9 @@ set preview_images true
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
 
+# Can be slow
+set automatically_count_files false
+
 # ===================================================================
 # == Define keys for the browser
 # ===================================================================
