Disable DPMS when fullscreen

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -9,6 +9,9 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# Disable DPMS when an application is fullscreen.
+exec --no-startup-id ~/.config/i3/disable-standby-fs.py
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
