--- a/i3/.config/i3status/config
+++ b/i3/.config/i3status/config
@@ -14,6 +14,7 @@ general {
 order += "wireless wlp2s0"
 order += "battery 1"
 order += "load"
+order += "volume master"
 order += "tztime local"
 
 tztime local {
@@ -41,3 +42,10 @@ wireless wlp2s0 {
          format_down = "W: down"
 }
 
+volume master {
+         format = "♪: %volume"
+         format_muted = "♪: muted (%volume)"
+         device = "default"
+         mixer = "Master"
+         mixer_idx = 0
+}
