--- a/x/.config/fontconfig/fonts.conf
+++ b/x/.config/fontconfig/fonts.conf
@@ -18,4 +18,14 @@
       <const>lcddefault</const>
     </edit>
   </match>
+
+  <!-- Default fonts -->
+  <alias>
+    <family>sans-serif</family>
+    <prefer><family>Noto Sans</family></prefer>
+  </alias>
+  <alias>
+    <family>serif</family>
+    <prefer><family>Noto Serif</family></prefer>
+  </alias>
 </fontconfig>
