Prefer Noto Sans replaces Helvetica
Rather than Nimbus Sans when available

--- a/x/.config/fontconfig/fonts.conf
+++ b/x/.config/fontconfig/fonts.conf
@@ -28,4 +28,8 @@
     <family>serif</family>
     <prefer><family>Noto Serif</family></prefer>
   </alias>
+  <alias>
+    <family>Helvetica</family>
+    <prefer><family>Noto Sans</family></prefer>
+  </alias>
 </fontconfig>
