--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -33,7 +33,7 @@ font pango:sans 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec urxvtc
 
 # kill focused window
 bindsym $mod+Shift+c kill
