--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -122,6 +122,9 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
+# switch workspace between outputs
+bindsym $mod+Ctrl+n move workspace to output right
+
 # reload the configuration file
 bindsym $mod+Shift+r reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
