Add global hook for optimizing committed PNGs

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,7 +3,8 @@
 [core]
 	excludesFile = ~/.gitignore_global
         attributesFile = ~/.gitattributes
+        hooksPath = ~/.githooks
 [push]
 	default = simple
 [diff "elisp"]
-	xfuncname = "^(\\((defun|defmacro) .*)$"
+	xfuncname = "^\\(.+"
